@@ -36,6 +36,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
@@ -102,6 +103,7 @@ import org.xml.sax.SAXException;
  * @author jejkal
  */
 @Component
+@SuppressWarnings("JavaUtilDate")
 public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
 
   private static final org.slf4j.Logger LOGGER = LoggerFactory.getLogger(MetastoreOAIPMHRepository.class);
@@ -112,13 +114,9 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
   private OaiPmhConfiguration pluginConfiguration;
 
   @Autowired
-  private ApplicationProperties metastoreProperties;
-  @Autowired
   private IDataRecordDao dataRecordDao;
   @Autowired
   private IMetadataFormatDao metadataFormatDao;
-  @Autowired
-  private OaiPmhConfiguration oaiConfigProperties;
   @Autowired
   private MetastoreConfiguration metadataConfig;
 
@@ -354,7 +352,7 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
       try {
         URL url = new URL(object.getMetadataDocumentUri());
         byte[] readFileToByteArray = FileUtils.readFileToByteArray(Paths.get(url.toURI()).toFile());
-        try ( InputStream inputStream = new ByteArrayInputStream(readFileToByteArray)) {
+        try (InputStream inputStream = new ByteArrayInputStream(readFileToByteArray)) {
           IOUtils.copy(inputStream, bout);
           wasError = false;
         }
@@ -439,6 +437,7 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
    *
    * @return A list of entities which might be empty.
    */
+  @SuppressWarnings("StringSplitter")
   private List<DataRecord> getEntities(OAIPMHBuilder builder) {
     List<DataRecord> results;
 
@@ -452,27 +451,23 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
     Instant until = builder.getUntilDate() != null ? builder.getUntilDate().toInstant() : Instant.now().plus(1, ChronoUnit.SECONDS);
     //check resumption token
     if (resumptionToken != null) {
+      String tokenValue = new String(Base64.decodeBase64(URLDecoder.decode(resumptionToken, StandardCharsets.UTF_8)), StandardCharsets.UTF_8);
+      LOGGER.trace("Found token with value {}", tokenValue);
+      String[] elements = tokenValue.split("/");
+      if (elements.length != 2) {
+        LOGGER.error("Invalid resumption token. Returning OAI-PMH error BAD_RESUMPTION_TOKEN.");
+        builder.addError(OAIPMHerrorcodeType.BAD_RESUMPTION_TOKEN, null);
+        return new ArrayList<>();
+      }
       try {
-        String tokenValue = new String(Base64.decodeBase64(URLDecoder.decode(resumptionToken, "UTF-8")));
-        LOGGER.trace("Found token with value {}", tokenValue);
-        String[] elements = tokenValue.split("/");
-        if (elements.length != 2) {
-          LOGGER.error("Invalid resumption token. Returning OAI-PMH error BAD_RESUMPTION_TOKEN.");
-          builder.addError(OAIPMHerrorcodeType.BAD_RESUMPTION_TOKEN, null);
-          return new ArrayList<>();
-        }
-        try {
-          LOGGER.trace("Parsing token values.");
-          currentCursor = Integer.parseInt(elements[0]);
-          overallCount = Integer.parseInt(elements[1]);
-          LOGGER.trace("Obtained {} as current cursor from token. Overall element count is {}.", currentCursor, overallCount);
-        } catch (NumberFormatException ex) {
-          //log error
-          builder.addError(OAIPMHerrorcodeType.BAD_RESUMPTION_TOKEN, null);
-          return new ArrayList<>();
-        }
-      } catch (UnsupportedEncodingException ex) {
-        LOGGER.error("Failed to get results from repository. Returning empty list.", ex);
+        LOGGER.trace("Parsing token values.");
+        currentCursor = Integer.parseInt(elements[0]);
+        overallCount = Integer.parseInt(elements[1]);
+        LOGGER.trace("Obtained {} as current cursor from token. Overall element count is {}.", currentCursor, overallCount);
+      } catch (NumberFormatException ex) {
+        //log error
+        builder.addError(OAIPMHerrorcodeType.BAD_RESUMPTION_TOKEN, null);
+        return new ArrayList<>();
       }
     } else {
       LOGGER.trace("No resumption token found.");
@@ -523,12 +518,8 @@ public class MetastoreOAIPMHRepository extends AbstractOAIPMHRepository {
       //we set no expiration as the token never expires
       String value = token.getCursor().intValue() + "/" + token.getCompleteListSize().intValue();
       LOGGER.trace("Setting resumption token value to {}.", value);
-      try {
-        token.setValue(URLEncoder.encode(Base64.encodeBase64String(value.getBytes()), "UTF-8"));
-        builder.setResumptionToken(token);
-      } catch (UnsupportedEncodingException ex) {
-        LOGGER.error("Failed to get results from repository. Returning empty list.", ex);
-      }
+      token.setValue(URLEncoder.encode(Base64.encodeBase64String(value.getBytes(StandardCharsets.UTF_8)), StandardCharsets.UTF_8));
+      builder.setResumptionToken(token);
     }
 
     return results;
